--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <div class="middle-container">
     <div class="profile">
       <img id="me-image" src="images/me.png" alt="my-image">
-      <h2 class="intro"> I'm a Mobile And Web Applicaton  Developer</h2>
-      <p class="text"> Recently I am working on software engineering for android and ios development. I have created over 10 android and ios apps with super user interface. </p>
+      <h2 class="intro"> Software & Web Developer</h2>
+      <p class="bio"> Hi! I'am Shahan Ahmed Chowdhury. I'am a professional Android & iOS Developer for creating modern apps with React Native & Flutter. Also have full experience of web Developing. I have created over 10 Android and iOS apps with super user interface. </p>
     </div>
     <hr>
     <div class="skills">
@@ -31,12 +31,12 @@
       <div class="skill-row">
         <img class="skill" src="images/mobile-dev.gif" alt="">
         <h3 > Mobile Development</h3>
-        <p class="to"> I have Java, Javascript, Kotlin, Flutter, React-Native, Pyhton Programming Skills for building mobile Apps. Also I am a full stack Web Developer </p>
+        <p > I have Java, Javascript, Kotlin, Flutter, React-Native & Pyhton Programming Skills for building Cross-Platform Mobile Apps. Also I am a full stack Web Developer </p>
       </div>
       <div class="skill-row">
         <img class="skill-now" src="images/web-dev.gif" alt="">
         <h3 >Web Development</h3>
-        <p class="to"> with great experience of HTML5, CSS3, React & Javascript I can creat super modern Website/Web Apps with smart UI design  </p>
+        <p > with great experience of HTML5, CSS3, React & Javascript I can creat super modern Website/Web Apps with smart UI design  </p>
       </div>
     </div>
 
@@ -52,7 +52,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://shahanchy.github.io/cv/">Website</a>
     <p class="copyright">© 2020 Shahan Ahmed Chowdhury All Right Reserve.</p>
   </div>
   </body>
