--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img id="me-image" src="images/me.png" alt="my-image">
+      <img id="me-image" src="images/my-pic.png" alt="my-image">
       <h2 class="intro"> Software & Web Developer</h2>
       <p class="bio"> Hi! I'am Shahan Ahmed Chowdhury. I'am a professional Android & iOS Developer for creating modern apps with React Native & Flutter. Also have full experience of web Developing. I have created over 10 Android and iOS apps with super user interface. </p>
     </div>
